--- a/Principal2.html
+++ b/Principal2.html
@@ -48,7 +48,7 @@
                                         <div class="tm-nav-link">
                                             <i class="fas fa-comments fa-3x tm-nav-icon"></i>
                                             <span class="tm-nav-text">Feedback</span>
-                                            <div class="product__bg"></div>             
+                                           <a href="feedas/feedback.html"> <div class="product__bg"></div>             </a>
                                         </div>                                                                      
                                     </div>
                                 </div>
