--- a/registerpast/Registro.html
+++ b/registerpast/Registro.html
@@ -47,6 +47,11 @@
 						<input type="Number"  placeholder="CPF" class="form-control">
 						<i class="fas fa-address-card"></i>
 					</div>
+					<!-- input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+        -webkit-appearance: none;
+        margin: 0;
+    } -->
 					<div class="form-wrapper">
 						<input type="text" placeholder="Endereço" class="form-control">
 						<i class="fas fa-street-view"></i>
@@ -57,7 +62,7 @@
 					</div>
 					<div class="form-wrapper">
 						<input type="number" placeholder="Numero da casa" class="form-control">
-						<i class="fas fa-house-user"></i>
+						<i class="fas fa-home"></i>
 					</div>
 					<div class="form-wrapper">
 						<input type="number" placeholder="CEP" class="form-control">
@@ -67,7 +72,7 @@
 						<input type="text" placeholder="Cidade" class="form-control">
 						<i class="fas fa-city"></i>
 					</div>
-					<button>Registre-se
+					<button>Registrar-se	
 						<i class="zmdi zmdi-arrow-right"></i>
 					</button>
 				</form>
